bin/y.output
   0  $accept : Declarations $end

   1  Declarations : Declaration
   2               | Declarations Declaration

   3  IdentifierWithoutDot : IDENTIFIER
   4                       | IDENTIFIER ArrayDeclarator
   5                       | '*' IDENTIFIER

   6  Identifier : IdentifierWithoutDot
   7             | IdentifierWithoutDot '.' Identifier

   8  Type : Type1
   9       | Type1 ArrayDeclarator

  10  Type1 : BOOL
  11        | BYTE
  12        | UBYTE
  13        | SHORT
  14        | USHORT
  15        | INT
  16        | UINT
  17        | LONG
  18        | ULONG
  19        | CHAR
  20        | FLOAT
  21        | DOUBLE
  22        | VOID

  23  ArrayDeclarator : '[' Shift ']'
  24                  | '[' Shift ']' ArrayDeclarator

  25  IdentifierDeclaration : IdentifierWithoutDot
  26                        | IdentifierWithoutDot '=' ConditionalExpression

  27  IdentifierList : IdentifierDeclaration
  28                 | IdentifierList ',' IdentifierDeclaration

  29  Declaration : FuncDeclaration
  30              | VarDeclarations
  31              | AggregateDeclaration

  32  VarDeclarations : Type IdentifierList ';'
  33                  | STRUCT IDENTIFIER IDENTIFIER ';'

  34  FuncDeclaration : Type IDENTIFIER '(' FuncScopeDummy VarDeclarationList ')' FunctionBody
  35                  | Type '*' IDENTIFIER '(' FuncScopeDummy VarDeclarationList ')' FunctionBody
  36                  | Type IDENTIFIER '(' FuncScopeDummy ')' FunctionBody
  37                  | Type '*' IDENTIFIER '(' FuncScopeDummy ')' FunctionBody

  38  FuncScopeDummy :

  39  IfScopeDummy1 :

  40  IfScopeDummy2 :

  41  FunctionBody : BlockStatement

  42  BlockStatement : '{' '}'
  43                 | '{' StatementList '}'

  44  AggregateDeclaration : StructDeclaration

  45  StructDeclaration : STRUCT IDENTIFIER '{' StructScopeDummy VarDeclarationsList '}' ';'

  46  StructScopeDummy :

  47  VarDeclarationsList : Type IdentifierWithoutDot ';'
  48                      | Type IdentifierWithoutDot ';' VarDeclarationsList

  49  VarDeclarationList : Type Identifier
  50                     | Type Identifier ',' VarDeclarationList

  51  StatementList : Statement
  52                | Statement StatementList

  53  Statement : ';'
  54            | NonEmptyStatement

  55  NonEmptyStatement : NonEmptyStatementNoCaseNoDefault

  56  NonEmptyStatementNoCaseNoDefault : LabeledStatement
  57                                   | ExpressionStatement
  58                                   | DeclarationStatement
  59                                   | IfStatement
  60                                   | WhileStatement
  61                                   | DoStatement
  62                                   | ForStatement
  63                                   | SwitchStatement
  64                                   | ContinueStatement
  65                                   | BreakStatement
  66                                   | ReturnStatement
  67                                   | GotoStatement
  68                                   | PrintStatement

  69  PrintStatement : WRITELN '(' Expression ')'

  70  LabeledStatement : IDENTIFIER ':' Statement

  71  ExpressionStatement : Expression ';'

  72  Expression : ConditionalExpression
  73             | MulDivMod AssignmentOperator Expression

  74  ConditionalExpression : OrOrExpression
  75                        | OrOrExpression '?' Expression ':' ConditionalExpression

  76  OrOrExpression : AndAndExpression
  77                 | OrOrExpression OR_OR AndAndExpression

  78  AndAndExpression : OrExpression
  79                   | AndAndExpression AND_AND OrExpression

  80  OrExpression : XorExpression
  81               | OrExpression '|' XorExpression

  82  XorExpression : AndExpression
  83                | XorExpression '^' AndExpression

  84  AndExpression : EqualNotEqual
  85                | AndExpression '&' EqualNotEqual

  86  EqualNotEqual : LtGtLteGte
  87                | EqualNotEqual EQ_EQ LtGtLteGte
  88                | EqualNotEqual NEQ LtGtLteGte

  89  LtGtLteGte : Shift
  90             | LtGtLteGte '<' Shift
  91             | LtGtLteGte '>' Shift
  92             | LtGtLteGte LEQ Shift
  93             | LtGtLteGte GEQ Shift

  94  Shift : PlusMinus
  95        | Shift LSHIFT PlusMinus
  96        | Shift RSHIFT PlusMinus
  97        | Shift LOG_RSHIFT PlusMinus

  98  PlusMinus : MulDivMod
  99            | PlusMinus '+' MulDivMod
 100            | PlusMinus '-' MulDivMod

 101  MulDivMod : UnaryExpression
 102            | UnaryExpression PLUS_PLUS
 103            | UnaryExpression MIN_MIN
 104            | MulDivMod '*' UnaryExpression
 105            | MulDivMod '/' UnaryExpression
 106            | MulDivMod '%' UnaryExpression
 107            | PointerExpression
 108            | MulDivMod '*' PointerExpression
 109            | MulDivMod '/' PointerExpression
 110            | MulDivMod '%' PointerExpression

 111  UnaryExpression : MainExpression
 112                  | UnaryOperator UnaryExpression
 113                  | UnaryOperator PointerExpression
 114                  | SIZEOF '(' Type ')'

 115  PointerExpression : '*' UnaryExpression

 116  UnaryOperator : '+'
 117                | '-'
 118                | '!'
 119                | '~'
 120                | '&'
 121                | PLUS_PLUS
 122                | MIN_MIN

 123  MainExpression : Starting
 124                 | IDENTIFIER ArraySuffixes
 125                 | IDENTIFIER '(' ')'
 126                 | IDENTIFIER '(' ExpressionList ')'
 127                 | IDENTIFIER '.' MainExpression

 128  ArraySuffixes : ArraySuffix
 129                | ArraySuffix ArraySuffixes

 130  ArraySuffix : '[' Expression ']'

 131  ExpressionList : Expression
 132                 | ExpressionList ',' Expression

 133  Starting : IDENTIFIER
 134           | INT_LIT
 135           | FLOAT_LIT
 136           | STRING_LIT
 137           | CHAR_LIT
 138           | TRUE
 139           | FALSE
 140           | '(' Expression ')'

 141  AssignmentOperator : '='
 142                     | PLUS_EQ
 143                     | MIN_EQ
 144                     | MULT_EQ
 145                     | DIV_EQ
 146                     | MOD_EQ
 147                     | AND_EQ
 148                     | OR_EQ
 149                     | XOR_EQ
 150                     | INV_EQ
 151                     | LSHIFT_EQ
 152                     | RSHIFT_EQ
 153                     | LOG_RSHIFT_EQ
 154                     | POW_EQ

 155  DeclarationStatement : Declaration

 156  IfStatement : IF '(' Expression ')' IfScopeDummy1 BlockStatement
 157              | IF '(' Expression ')' IfScopeDummy1 BlockStatement IfEndScopeDummy ELSE IfScopeDummy2 BlockStatement

 158  IfEndScopeDummy :

 159  WhileStatement : WHILE '(' WhileScopeDummy Expression ')' BlockStatement

 160  WhileScopeDummy :

 161  DoScopeDummy :

 162  ForScopeDummy :

 163  DoStatement : DO DoScopeDummy BlockStatement WHILE '(' Expression ')' ';'

 164  ForStatement : FOR '(' ForScopeDummy Initialize Initialize ')' BlockStatement
 165               | FOR '(' ForScopeDummy Initialize Initialize Expression ')' BlockStatement

 166  Initialize : ';'
 167             | ExpressionStatement

 168  ContinueStatement : CONTINUE ';'

 169  BreakStatement : BREAK ';'

 170  ReturnStatement : RETURN Expression ';'
 171                  | RETURN ';'

 172  GotoStatement : GOTO IDENTIFIER ';'

 173  SwitchStatement : SWITCH SwitchDummy '(' Expression ')' '{' CaseDefaultStatement '}'

 174  CaseDefaultStatement : CaseStatement
 175                       | DefaultStatement
 176                       | CaseStatement CaseDefaultStatement
 177                       | DefaultStatement CaseDefaultStatement

 178  CaseStatement : CASE Starting ':' CaseStatementDummy StatementListNoCaseNoDefault

 179  DefaultStatement : DEFAULT ':' CaseStatementDummy StatementListNoCaseNoDefault

 180  CaseStatementDummy :

 181  SwitchDummy :

 182  StatementListNoCaseNoDefault : StatementNoCaseNoDefault
 183                               | StatementNoCaseNoDefault StatementListNoCaseNoDefault

 184  StatementNoCaseNoDefault : ';'
 185                           | NonEmptyStatementNoCaseNoDefault
 186                           | BlockStatement

state 0
	$accept : . Declarations $end  (0)

	BOOL  shift 1
	BYTE  shift 2
	CHAR  shift 3
	DOUBLE  shift 4
	FLOAT  shift 5
	INT  shift 6
	LONG  shift 7
	SHORT  shift 8
	STRUCT  shift 9
	UBYTE  shift 10
	UINT  shift 11
	ULONG  shift 12
	USHORT  shift 13
	VOID  shift 14
	.  error

	Declarations  goto 15
	Type1  goto 16
	Type  goto 17
	Declaration  goto 18
	VarDeclarations  goto 19
	FuncDeclaration  goto 20
	AggregateDeclaration  goto 21
	StructDeclaration  goto 22


state 1
	Type1 : BOOL .  (10)

	.  reduce 10


state 2
	Type1 : BYTE .  (11)

	.  reduce 11


state 3
	Type1 : CHAR .  (19)

	.  reduce 19


state 4
	Type1 : DOUBLE .  (21)

	.  reduce 21


state 5
	Type1 : FLOAT .  (20)

	.  reduce 20


state 6
	Type1 : INT .  (15)

	.  reduce 15


state 7
	Type1 : LONG .  (17)

	.  reduce 17


state 8
	Type1 : SHORT .  (13)

	.  reduce 13


state 9
	VarDeclarations : STRUCT . IDENTIFIER IDENTIFIER ';'  (33)
	StructDeclaration : STRUCT . IDENTIFIER '{' StructScopeDummy VarDeclarationsList '}' ';'  (45)

	IDENTIFIER  shift 23
	.  error


state 10
	Type1 : UBYTE .  (12)

	.  reduce 12


state 11
	Type1 : UINT .  (16)

	.  reduce 16


state 12
	Type1 : ULONG .  (18)

	.  reduce 18


state 13
	Type1 : USHORT .  (14)

	.  reduce 14


state 14
	Type1 : VOID .  (22)

	.  reduce 22


state 15
	$accept : Declarations . $end  (0)
	Declarations : Declarations . Declaration  (2)

	$end  accept
	BOOL  shift 1
	BYTE  shift 2
	CHAR  shift 3
	DOUBLE  shift 4
	FLOAT  shift 5
	INT  shift 6
	LONG  shift 7
	SHORT  shift 8
	STRUCT  shift 9
	UBYTE  shift 10
	UINT  shift 11
	ULONG  shift 12
	USHORT  shift 13
	VOID  shift 14
	.  error

	Type1  goto 16
	Type  goto 17
	Declaration  goto 24
	VarDeclarations  goto 19
	FuncDeclaration  goto 20
	AggregateDeclaration  goto 21
	StructDeclaration  goto 22


state 16
	Type : Type1 .  (8)
	Type : Type1 . ArrayDeclarator  (9)

	'['  shift 25
	IDENTIFIER  reduce 8
	'*'  reduce 8
	')'  reduce 8

	ArrayDeclarator  goto 26


state 17
	VarDeclarations : Type . IdentifierList ';'  (32)
	FuncDeclaration : Type . IDENTIFIER '(' FuncScopeDummy VarDeclarationList ')' FunctionBody  (34)
	FuncDeclaration : Type . '*' IDENTIFIER '(' FuncScopeDummy VarDeclarationList ')' FunctionBody  (35)
	FuncDeclaration : Type . IDENTIFIER '(' FuncScopeDummy ')' FunctionBody  (36)
	FuncDeclaration : Type . '*' IDENTIFIER '(' FuncScopeDummy ')' FunctionBody  (37)

	IDENTIFIER  shift 27
	'*'  shift 28
	.  error

	IdentifierWithoutDot  goto 29
	IdentifierList  goto 30
	IdentifierDeclaration  goto 31


state 18
	Declarations : Declaration .  (1)

	.  reduce 1


state 19
	Declaration : VarDeclarations .  (30)

	.  reduce 30


state 20
	Declaration : FuncDeclaration .  (29)

	.  reduce 29


state 21
	Declaration : AggregateDeclaration .  (31)

	.  reduce 31


state 22
	AggregateDeclaration : StructDeclaration .  (44)

	.  reduce 44


state 23
	VarDeclarations : STRUCT IDENTIFIER . IDENTIFIER ';'  (33)
	StructDeclaration : STRUCT IDENTIFIER . '{' StructScopeDummy VarDeclarationsList '}' ';'  (45)

	IDENTIFIER  shift 32
	'{'  shift 33
	.  error


state 24
	Declarations : Declarations Declaration .  (2)

	.  reduce 2


state 25
	ArrayDeclarator : '[' . Shift ']'  (23)
	ArrayDeclarator : '[' . Shift ']' ArrayDeclarator  (24)

	INT_LIT  shift 34
	FLOAT_LIT  shift 35
	CHAR_LIT  shift 36
	STRING_LIT  shift 37
	IDENTIFIER  shift 38
	MIN_MIN  shift 39
	PLUS_PLUS  shift 40
	FALSE  shift 41
	SIZEOF  shift 42
	TRUE  shift 43
	'*'  shift 44
	'('  shift 45
	'&'  shift 46
	'+'  shift 47
	'-'  shift 48
	'!'  shift 49
	'~'  shift 50
	.  error

	Shift  goto 51
	PlusMinus  goto 52
	MulDivMod  goto 53
	UnaryExpression  goto 54
	PointerExpression  goto 55
	UnaryOperator  goto 56
	MainExpression  goto 57
	Starting  goto 58


state 26
	Type : Type1 ArrayDeclarator .  (9)

	.  reduce 9


state 27
	IdentifierWithoutDot : IDENTIFIER .  (3)
	IdentifierWithoutDot : IDENTIFIER . ArrayDeclarator  (4)
	FuncDeclaration : Type IDENTIFIER . '(' FuncScopeDummy VarDeclarationList ')' FunctionBody  (34)
	FuncDeclaration : Type IDENTIFIER . '(' FuncScopeDummy ')' FunctionBody  (36)

	'['  shift 25
	'('  shift 59
	'='  reduce 3
	','  reduce 3
	';'  reduce 3

	ArrayDeclarator  goto 60


state 28
	IdentifierWithoutDot : '*' . IDENTIFIER  (5)
	FuncDeclaration : Type '*' . IDENTIFIER '(' FuncScopeDummy VarDeclarationList ')' FunctionBody  (35)
	FuncDeclaration : Type '*' . IDENTIFIER '(' FuncScopeDummy ')' FunctionBody  (37)

	IDENTIFIER  shift 61
	.  error


state 29
	IdentifierDeclaration : IdentifierWithoutDot .  (25)
	IdentifierDeclaration : IdentifierWithoutDot . '=' ConditionalExpression  (26)

	'='  shift 62
	','  reduce 25
	';'  reduce 25


state 30
	IdentifierList : IdentifierList . ',' IdentifierDeclaration  (28)
	VarDeclarations : Type IdentifierList . ';'  (32)

	','  shift 63
	';'  shift 64
	.  error


state 31
	IdentifierList : IdentifierDeclaration .  (27)

	.  reduce 27


state 32
	VarDeclarations : STRUCT IDENTIFIER IDENTIFIER . ';'  (33)

	';'  shift 65
	.  error


state 33
	StructDeclaration : STRUCT IDENTIFIER '{' . StructScopeDummy VarDeclarationsList '}' ';'  (45)
	StructScopeDummy : .  (46)

	.  reduce 46

	StructScopeDummy  goto 66


state 34
	Starting : INT_LIT .  (134)

	.  reduce 134


state 35
	Starting : FLOAT_LIT .  (135)

	.  reduce 135


state 36
	Starting : CHAR_LIT .  (137)

	.  reduce 137


state 37
	Starting : STRING_LIT .  (136)

	.  reduce 136


state 38
	MainExpression : IDENTIFIER . ArraySuffixes  (124)
	MainExpression : IDENTIFIER . '(' ')'  (125)
	MainExpression : IDENTIFIER . '(' ExpressionList ')'  (126)
	MainExpression : IDENTIFIER . '.' MainExpression  (127)
	Starting : IDENTIFIER .  (133)

	'.'  shift 67
	'['  shift 68
	'('  shift 69
	DIV_EQ  reduce 133
	AND_EQ  reduce 133
	AND_AND  reduce 133
	OR_EQ  reduce 133
	OR_OR  reduce 133
	MIN_EQ  reduce 133
	MIN_MIN  reduce 133
	PLUS_EQ  reduce 133
	PLUS_PLUS  reduce 133
	LEQ  reduce 133
	LSHIFT  reduce 133
	LSHIFT_EQ  reduce 133
	GEQ  reduce 133
	RSHIFT_EQ  reduce 133
	LOG_RSHIFT_EQ  reduce 133
	RSHIFT  reduce 133
	LOG_RSHIFT  reduce 133
	NEQ  reduce 133
	EQ_EQ  reduce 133
	MULT_EQ  reduce 133
	MOD_EQ  reduce 133
	XOR_EQ  reduce 133
	POW_EQ  reduce 133
	INV_EQ  reduce 133
	'*'  reduce 133
	']'  reduce 133
	'='  reduce 133
	','  reduce 133
	';'  reduce 133
	')'  reduce 133
	':'  reduce 133
	'?'  reduce 133
	'|'  reduce 133
	'^'  reduce 133
	'&'  reduce 133
	'<'  reduce 133
	'>'  reduce 133
	'+'  reduce 133
	'-'  reduce 133
	'/'  reduce 133
	'%'  reduce 133

	ArraySuffix  goto 70
	ArraySuffixes  goto 71


state 39
	UnaryOperator : MIN_MIN .  (122)

	.  reduce 122


state 40
	UnaryOperator : PLUS_PLUS .  (121)

	.  reduce 121


state 41
	Starting : FALSE .  (139)

	.  reduce 139


state 42
	UnaryExpression : SIZEOF . '(' Type ')'  (114)

	'('  shift 72
	.  error


state 43
	Starting : TRUE .  (138)

	.  reduce 138


state 44
	PointerExpression : '*' . UnaryExpression  (115)

	INT_LIT  shift 34
	FLOAT_LIT  shift 35
	CHAR_LIT  shift 36
	STRING_LIT  shift 37
	IDENTIFIER  shift 38
	MIN_MIN  shift 39
	PLUS_PLUS  shift 40
	FALSE  shift 41
	SIZEOF  shift 42
	TRUE  shift 43
	'('  shift 45
	'&'  shift 46
	'+'  shift 47
	'-'  shift 48
	'!'  shift 49
	'~'  shift 50
	.  error

	UnaryExpression  goto 73
	UnaryOperator  goto 56
	MainExpression  goto 57
	Starting  goto 58


state 45
	Starting : '(' . Expression ')'  (140)

	INT_LIT  shift 34
	FLOAT_LIT  shift 35
	CHAR_LIT  shift 36
	STRING_LIT  shift 37
	IDENTIFIER  shift 38
	MIN_MIN  shift 39
	PLUS_PLUS  shift 40
	FALSE  shift 41
	SIZEOF  shift 42
	TRUE  shift 43
	'*'  shift 44
	'('  shift 45
	'&'  shift 46
	'+'  shift 47
	'-'  shift 48
	'!'  shift 49
	'~'  shift 50
	.  error

	Expression  goto 74
	ConditionalExpression  goto 75
	OrOrExpression  goto 76
	AndAndExpression  goto 77
	OrExpression  goto 78
	XorExpression  goto 79
	AndExpression  goto 80
	EqualNotEqual  goto 81
	LtGtLteGte  goto 82
	Shift  goto 83
	PlusMinus  goto 52
	MulDivMod  goto 84
	UnaryExpression  goto 54
	PointerExpression  goto 55
	UnaryOperator  goto 56
	MainExpression  goto 57
	Starting  goto 58


state 46
	UnaryOperator : '&' .  (120)

	.  reduce 120


state 47
	UnaryOperator : '+' .  (116)

	.  reduce 116


state 48
	UnaryOperator : '-' .  (117)

	.  reduce 117


state 49
	UnaryOperator : '!' .  (118)

	.  reduce 118


state 50
	UnaryOperator : '~' .  (119)

	.  reduce 119


state 51
	ArrayDeclarator : '[' Shift . ']'  (23)
	ArrayDeclarator : '[' Shift . ']' ArrayDeclarator  (24)
	Shift : Shift . LSHIFT PlusMinus  (95)
	Shift : Shift . RSHIFT PlusMinus  (96)
	Shift : Shift . LOG_RSHIFT PlusMinus  (97)

	LSHIFT  shift 85
	RSHIFT  shift 86
	LOG_RSHIFT  shift 87
	']'  shift 88
	.  error


state 52
	Shift : PlusMinus .  (94)
	PlusMinus : PlusMinus . '+' MulDivMod  (99)
	PlusMinus : PlusMinus . '-' MulDivMod  (100)

	'+'  shift 89
	'-'  shift 90
	AND_AND  reduce 94
	OR_OR  reduce 94
	LEQ  reduce 94
	LSHIFT  reduce 94
	GEQ  reduce 94
	RSHIFT  reduce 94
	LOG_RSHIFT  reduce 94
	NEQ  reduce 94
	EQ_EQ  reduce 94
	']'  reduce 94
	','  reduce 94
	';'  reduce 94
	')'  reduce 94
	':'  reduce 94
	'?'  reduce 94
	'|'  reduce 94
	'^'  reduce 94
	'&'  reduce 94
	'<'  reduce 94
	'>'  reduce 94


state 53
	PlusMinus : MulDivMod .  (98)
	MulDivMod : MulDivMod . '*' UnaryExpression  (104)
	MulDivMod : MulDivMod . '/' UnaryExpression  (105)
	MulDivMod : MulDivMod . '%' UnaryExpression  (106)
	MulDivMod : MulDivMod . '*' PointerExpression  (108)
	MulDivMod : MulDivMod . '/' PointerExpression  (109)
	MulDivMod : MulDivMod . '%' PointerExpression  (110)

	'*'  shift 91
	'/'  shift 92
	'%'  shift 93
	AND_AND  reduce 98
	OR_OR  reduce 98
	LEQ  reduce 98
	LSHIFT  reduce 98
	GEQ  reduce 98
	RSHIFT  reduce 98
	LOG_RSHIFT  reduce 98
	NEQ  reduce 98
	EQ_EQ  reduce 98
	']'  reduce 98
	','  reduce 98
	';'  reduce 98
	')'  reduce 98
	':'  reduce 98
	'?'  reduce 98
	'|'  reduce 98
	'^'  reduce 98
	'&'  reduce 98
	'<'  reduce 98
	'>'  reduce 98
	'+'  reduce 98
	'-'  reduce 98


state 54
	MulDivMod : UnaryExpression .  (101)
	MulDivMod : UnaryExpression . PLUS_PLUS  (102)
	MulDivMod : UnaryExpression . MIN_MIN  (103)

	MIN_MIN  shift 94
	PLUS_PLUS  shift 95
	DIV_EQ  reduce 101
	AND_EQ  reduce 101
	AND_AND  reduce 101
	OR_EQ  reduce 101
	OR_OR  reduce 101
	MIN_EQ  reduce 101
	PLUS_EQ  reduce 101
	LEQ  reduce 101
	LSHIFT  reduce 101
	LSHIFT_EQ  reduce 101
	GEQ  reduce 101
	RSHIFT_EQ  reduce 101
	LOG_RSHIFT_EQ  reduce 101
	RSHIFT  reduce 101
	LOG_RSHIFT  reduce 101
	NEQ  reduce 101
	EQ_EQ  reduce 101
	MULT_EQ  reduce 101
	MOD_EQ  reduce 101
	XOR_EQ  reduce 101
	POW_EQ  reduce 101
	INV_EQ  reduce 101
	'*'  reduce 101
	']'  reduce 101
	'='  reduce 101
	','  reduce 101
	';'  reduce 101
	')'  reduce 101
	':'  reduce 101
	'?'  reduce 101
	'|'  reduce 101
	'^'  reduce 101
	'&'  reduce 101
	'<'  reduce 101
	'>'  reduce 101
	'+'  reduce 101
	'-'  reduce 101
	'/'  reduce 101
	'%'  reduce 101


state 55
	MulDivMod : PointerExpression .  (107)

	.  reduce 107


state 56
	UnaryExpression : UnaryOperator . UnaryExpression  (112)
	UnaryExpression : UnaryOperator . PointerExpression  (113)

	INT_LIT  shift 34
	FLOAT_LIT  shift 35
	CHAR_LIT  shift 36
	STRING_LIT  shift 37
	IDENTIFIER  shift 38
	MIN_MIN  shift 39
	PLUS_PLUS  shift 40
	FALSE  shift 41
	SIZEOF  shift 42
	TRUE  shift 43
	'*'  shift 44
	'('  shift 45
	'&'  shift 46
	'+'  shift 47
	'-'  shift 48
	'!'  shift 49
	'~'  shift 50
	.  error

	UnaryExpression  goto 96
	PointerExpression  goto 97
	UnaryOperator  goto 56
	MainExpression  goto 57
	Starting  goto 58


state 57
	UnaryExpression : MainExpression .  (111)

	.  reduce 111


state 58
	MainExpression : Starting .  (123)

	.  reduce 123


state 59
	FuncDeclaration : Type IDENTIFIER '(' . FuncScopeDummy VarDeclarationList ')' FunctionBody  (34)
	FuncDeclaration : Type IDENTIFIER '(' . FuncScopeDummy ')' FunctionBody  (36)
	FuncScopeDummy : .  (38)

	.  reduce 38

	FuncScopeDummy  goto 98


state 60
	IdentifierWithoutDot : IDENTIFIER ArrayDeclarator .  (4)

	.  reduce 4


state 61
	IdentifierWithoutDot : '*' IDENTIFIER .  (5)
	FuncDeclaration : Type '*' IDENTIFIER . '(' FuncScopeDummy VarDeclarationList ')' FunctionBody  (35)
	FuncDeclaration : Type '*' IDENTIFIER . '(' FuncScopeDummy ')' FunctionBody  (37)

	'('  shift 99
	'='  reduce 5
	','  reduce 5
	';'  reduce 5


state 62
	IdentifierDeclaration : IdentifierWithoutDot '=' . ConditionalExpression  (26)

	INT_LIT  shift 34
	FLOAT_LIT  shift 35
	CHAR_LIT  shift 36
	STRING_LIT  shift 37
	IDENTIFIER  shift 38
	MIN_MIN  shift 39
	PLUS_PLUS  shift 40
	FALSE  shift 41
	SIZEOF  shift 42
	TRUE  shift 43
	'*'  shift 44
	'('  shift 45
	'&'  shift 46
	'+'  shift 47
	'-'  shift 48
	'!'  shift 49
	'~'  shift 50
	.  error

	ConditionalExpression  goto 100
	OrOrExpression  goto 76
	AndAndExpression  goto 77
	OrExpression  goto 78
	XorExpression  goto 79
	AndExpression  goto 80
	EqualNotEqual  goto 81
	LtGtLteGte  goto 82
	Shift  goto 83
	PlusMinus  goto 52
	MulDivMod  goto 53
	UnaryExpression  goto 54
	PointerExpression  goto 55
	UnaryOperator  goto 56
	MainExpression  goto 57
	Starting  goto 58


state 63
	IdentifierList : IdentifierList ',' . IdentifierDeclaration  (28)

	IDENTIFIER  shift 101
	'*'  shift 102
	.  error

	IdentifierWithoutDot  goto 29
	IdentifierDeclaration  goto 103


state 64
	VarDeclarations : Type IdentifierList ';' .  (32)

	.  reduce 32


state 65
	VarDeclarations : STRUCT IDENTIFIER IDENTIFIER ';' .  (33)

	.  reduce 33


state 66
	StructDeclaration : STRUCT IDENTIFIER '{' StructScopeDummy . VarDeclarationsList '}' ';'  (45)

	BOOL  shift 1
	BYTE  shift 2
	CHAR  shift 3
	DOUBLE  shift 4
	FLOAT  shift 5
	INT  shift 6
	LONG  shift 7
	SHORT  shift 8
	UBYTE  shift 10
	UINT  shift 11
	ULONG  shift 12
	USHORT  shift 13
	VOID  shift 14
	.  error

	Type1  goto 16
	Type  goto 104
	VarDeclarationsList  goto 105


state 67
	MainExpression : IDENTIFIER '.' . MainExpression  (127)

	INT_LIT  shift 34
	FLOAT_LIT  shift 35
	CHAR_LIT  shift 36
	STRING_LIT  shift 37
	IDENTIFIER  shift 38
	FALSE  shift 41
	TRUE  shift 43
	'('  shift 45
	.  error

	MainExpression  goto 106
	Starting  goto 58


state 68
	ArraySuffix : '[' . Expression ']'  (130)

	INT_LIT  shift 34
	FLOAT_LIT  shift 35
	CHAR_LIT  shift 36
	STRING_LIT  shift 37
	IDENTIFIER  shift 38
	MIN_MIN  shift 39
	PLUS_PLUS  shift 40
	FALSE  shift 41
	SIZEOF  shift 42
	TRUE  shift 43
	'*'  shift 44
	'('  shift 45
	'&'  shift 46
	'+'  shift 47
	'-'  shift 48
	'!'  shift 49
	'~'  shift 50
	.  error

	Expression  goto 107
	ConditionalExpression  goto 75
	OrOrExpression  goto 76
	AndAndExpression  goto 77
	OrExpression  goto 78
	XorExpression  goto 79
	AndExpression  goto 80
	EqualNotEqual  goto 81
	LtGtLteGte  goto 82
	Shift  goto 83
	PlusMinus  goto 52
	MulDivMod  goto 84
	UnaryExpression  goto 54
	PointerExpression  goto 55
	UnaryOperator  goto 56
	MainExpression  goto 57
	Starting  goto 58


state 69
	MainExpression : IDENTIFIER '(' . ')'  (125)
	MainExpression : IDENTIFIER '(' . ExpressionList ')'  (126)

	INT_LIT  shift 34
	FLOAT_LIT  shift 35
	CHAR_LIT  shift 36
	STRING_LIT  shift 37
	IDENTIFIER  shift 38
	MIN_MIN  shift 39
	PLUS_PLUS  shift 40
	FALSE  shift 41
	SIZEOF  shift 42
	TRUE  shift 43
	'*'  shift 44
	'('  shift 45
	')'  shift 108
	'&'  shift 46
	'+'  shift 47
	'-'  shift 48
	'!'  shift 49
	'~'  shift 50
	.  error

	Expression  goto 109
	ConditionalExpression  goto 75
	OrOrExpression  goto 76
	AndAndExpression  goto 77
	OrExpression  goto 78
	XorExpression  goto 79
	AndExpression  goto 80
	EqualNotEqual  goto 81
	LtGtLteGte  goto 82
	Shift  goto 83
	PlusMinus  goto 52
	MulDivMod  goto 84
	UnaryExpression  goto 54
	PointerExpression  goto 55
	UnaryOperator  goto 56
	MainExpression  goto 57
	ExpressionList  goto 110
	Starting  goto 58


state 70
	ArraySuffixes : ArraySuffix .  (128)
	ArraySuffixes : ArraySuffix . ArraySuffixes  (129)

	'['  shift 68
	DIV_EQ  reduce 128
	AND_EQ  reduce 128
	AND_AND  reduce 128
	OR_EQ  reduce 128
	OR_OR  reduce 128
	MIN_EQ  reduce 128
	MIN_MIN  reduce 128
	PLUS_EQ  reduce 128
	PLUS_PLUS  reduce 128
	LEQ  reduce 128
	LSHIFT  reduce 128
	LSHIFT_EQ  reduce 128
	GEQ  reduce 128
	RSHIFT_EQ  reduce 128
	LOG_RSHIFT_EQ  reduce 128
	RSHIFT  reduce 128
	LOG_RSHIFT  reduce 128
	NEQ  reduce 128
	EQ_EQ  reduce 128
	MULT_EQ  reduce 128
	MOD_EQ  reduce 128
	XOR_EQ  reduce 128
	POW_EQ  reduce 128
	INV_EQ  reduce 128
	'*'  reduce 128
	']'  reduce 128
	'='  reduce 128
	','  reduce 128
	';'  reduce 128
	')'  reduce 128
	':'  reduce 128
	'?'  reduce 128
	'|'  reduce 128
	'^'  reduce 128
	'&'  reduce 128
	'<'  reduce 128
	'>'  reduce 128
	'+'  reduce 128
	'-'  reduce 128
	'/'  reduce 128
	'%'  reduce 128

	ArraySuffix  goto 70
	ArraySuffixes  goto 111


state 71
	MainExpression : IDENTIFIER ArraySuffixes .  (124)

	.  reduce 124


state 72
	UnaryExpression : SIZEOF '(' . Type ')'  (114)

	BOOL  shift 1
	BYTE  shift 2
	CHAR  shift 3
	DOUBLE  shift 4
	FLOAT  shift 5
	INT  shift 6
	LONG  shift 7
	SHORT  shift 8
	UBYTE  shift 10
	UINT  shift 11
	ULONG  shift 12
	USHORT  shift 13
	VOID  shift 14
	.  error

	Type1  goto 16
	Type  goto 112


state 73
	PointerExpression : '*' UnaryExpression .  (115)

	.  reduce 115

